--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,13 +28,15 @@ services:
   api:
     build: ./code/api
     command: >
-      bash -c "python src/manage.py migrate
+      bash -c "sleep 10
+      && python src/manage.py migrate
+      && python src/manage.py makemigrations api
+      && python src/manage.py migrate
       && python src/manage.py loaddata initial_data.json
+      && python src/manage.py etl
       && python src/manage.py runserver 0.0.0.0:8000"
     ports:
       - 8000:8000
-    links:
-      - elasticsearch:localhost
     depends_on: 
       - db
 
